--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^4.2.1",
     "happy-dom": "^12.10.3",
-    "msw": "^2.0.10",
+    "msw": "^2.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^5.0.5",
     "vitest": "^1.0.1",
     "vitest-github-actions-reporter": "^0.11.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "src"
+    ]
   }
 }
